<resources>
    <string name="app_name">Park Smart</string>
    <string name="title_activity_maps">Map</string>
    <string name="legal">legal</string>
    <string name="todo">TODO</string>
    <string name="FirstName_LastName">Name</string>
    <string name="Book">Book a slot</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signupPrompt">Don\'t have an acount? Sign Up</string>
    <string name="skip">Skip</string>
    <string name="have_an_acount_login">Have an acount? Login</string>
    <string name="signup">SIGNUP</string>
    <string name="edit_account">Edit account</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email Id</string>
    <string name="example_email_com">example@email.com</string>
    <string name="_1234567890">1234567890</string>
    <string name="sign_out">Sign Out</string>
    <string name="system">System</string>
    <string name="charges">Charges:-</string>
    <string name="_24_rs">24 rs</string>
    <string name="otp">OTP :-</string>
    <string name="Otp_eg">123985</string>
    <string name="slot_no_x">Slot No: X</string>
    <string name="help">Help</string>
    <string name="phoneNo">1234567890</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_map_nav">MapNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="title_activity_temp_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigate">Navigate</string>
    <string name="address">Flat No 404, Skyline Apartments, Vizag - 500576</string>
    <string name="proceed_payment">PROCEED PAYMENT</string>
</resources>
